--- a/public/index.html
+++ b/public/index.html
@@ -45,42 +45,44 @@
 									Both film and digital.
 								</p>
 								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+									<div class="gallery">
+										<div class="row">
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic01.jpg" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic02.jpg" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic03.jpg" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic04.jpg" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic05.jpg" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic06.jpg" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic07.jpg" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic08.jpg" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic09.jpg" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic10.jpg" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic11.jpg" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<a href="images/pic12.jpg" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											</div>
 										</div>
 									</div>
 								</section>
