Add leaflet map, granim background

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<!-- Background Granim Gradient -->
+			<canvas id="bg-gradient">
+
+			</canvas>
 
 		<!-- Wrapper-->
 			<div id="wrapper">
@@ -17,6 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#photos" class="icon solid fa-images"><span>Photos</span></a>
+						<a href="#travelmap" class="icon solid fa-map"><span>Travel Map</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://github.com/willfleetw" class="icon brands fa-github"><span>GitHub</span></a>
 					</nav>
@@ -50,6 +55,19 @@
 										</div>
 									</div>
 								</section>
+							</article>
+
+						<!-- Travel Map -->
+							<article id="travelmap" class="panel">
+								<header>
+									<h2>Travel Map</h2>
+								</header>
+								<p>
+									An interactive map including all the major stops I've made so far!
+								</p>
+								<div id="map">
+
+								</div>
 							</article>
 
 						<!-- Contact -->
@@ -96,9 +114,13 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/lightbox.min.js"></script>
+			<script src="assets/js/leaflet.js"></script>
+			<script src="assets/js/leaflet.fullscreen.min.js"></script>
+			<script src="assets/js/granim.min.js"></script>
+			<script src="assets/js/gradient.js"></script>
+			<script src="assets/js/map.js"></script>
 			<script src="assets/js/gallery.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
