Move data jsons, finish contact form

--- a/public/index.html
+++ b/public/index.html
@@ -75,14 +75,14 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
+								<form action="https://formspree.io/f/mdobwwpw" method="post">
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<input type="text" name="name" placeholder="Name" />
 											</div>
 											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
+												<input type="email" name="email" placeholder="Email" />
 											</div>
 											<div class="col-12">
 												<input type="text" name="subject" placeholder="Subject" />
