Update server with actual photos

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>William Fleetwood</h1>
-									<p>Lazy Meandering Layabout</p>
+									<p>Photos and Travel Map</p>
 								</header>
 								<a href="#photos" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my photos</span></span>
