--- a/public/index.html
+++ b/public/index.html
@@ -1,126 +1,33 @@
-<!DOCTYPE HTML>
-
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Fleetwood Photos</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Background Granim Gradient -->
-			<canvas id="bg-gradient">
+  <head>
+    <title>Fleetwood Photos</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body>
+    <!-- Background Granim Gradient -->
+    <canvas id="bg-gradient"></canvas>
 
-			</canvas>
+    <div class="masonry">
+    </div>
 
-		<!-- Wrapper-->
-			<div id="wrapper">
-
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#photos" class="icon solid fa-images"><span>Photos</span></a>
-						<a href="#travelmap" class="icon solid fa-map"><span>Travel Map</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://github.com/willfleetw" class="icon brands fa-github"><span>GitHub</span></a>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Me -->
-							<article id="home" class="panel intro">
-								<header>
-									<h1>William Fleetwood</h1>
-									<p>Photos and Travel Map</p>
-								</header>
-								<a href="#photos" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my photos</span></span>
-									<img src="https://firebasestorage.googleapis.com/v0/b/fleetwood-photos.appspot.com/o/me.jpg?alt=media&token=2c86f875-2cdb-42c7-8ae1-1c38771145ca" alt="" />
-								</a>
-							</article>
-
-						<!-- Photos -->
-							<article id="photos" class="panel">
-								<header>
-									<h2>Photos</h2>
-								</header>
-								<p>
-									Both film and digital.
-								</p>
-								<section>
-									<div id="gallery">
-										<div class="row">
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Travel Map -->
-							<article id="travelmap" class="panel">
-								<header>
-									<h2>Travel Map</h2>
-								</header>
-								<p>
-									An interactive map including all the major stops I've made so far!
-								</p>
-								<div id="map">
-
-								</div>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<form action="https://formspree.io/f/mdobwwpw" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="email" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/lightbox.min.js"></script>
-			<script src="assets/js/leaflet.js"></script>
-			<script src="assets/js/leaflet.fullscreen.min.js"></script>
-			<script src="assets/js/granim.min.js"></script>
-			<script src="assets/js/gradient.js"></script>
-			<script src="assets/js/map.js"></script>
-			<script type="module" src="assets/js/gallery.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/lightbox.min.js"></script>
+    <script src="assets/js/granim.min.js"></script>
+    <script src="assets/js/gradient.js"></script>
+    <script type="module" src="assets/js/gallery.js"></script>
+    
+    <script>
+      lightbox.option({
+        'disableScrolling': true,
+        'wrapAround': true,
+        'resizeDuration': 100,
+        'imageFadeDuration': 100,
+        'fadeDuration': 100,
+      });
+  </script>
+  </body>
 </html>
