--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
     <canvas id="bg-gradient"></canvas>
 
     <div class="topnav" id="topnav">
-      <a href="#" class="active">
+      <a href="index.html">
         <i class="fa-solid fa-camera"></i>
       </a>
       <a href="#contact">
@@ -23,26 +23,11 @@
       </a>
     </div>
 
-    <!-- Masonry Image Gallery -->
-    <div class="masonry">
-    </div>
+    <h1>Page Not Found</h1>
     
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/granim.min.js"></script>
     <script src="assets/js/gradient.js"></script>
     <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/lightbox.min.js"></script>
-    <script type="module" src="assets/js/gallery.js"></script>
-
-        <script>
-      lightbox.option({
-        'disableScrolling': true,
-        'wrapAround': true,
-        'resizeDuration': 100,
-        'imageFadeDuration': 100,
-        'fadeDuration': 100,
-      });
-    </script>
   </body>
 </html>
