Update to use JS Masonry, proper ltr ordering of images

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     </div>
 
     <!-- Masonry Image Gallery -->
-    <div class="masonry">
+    <div class="grid">
+      <div class="grid-sizer"></div>
     </div>
     
     <!-- Scripts -->
@@ -32,6 +33,8 @@
     <script src="assets/js/gradient.js"></script>
     <script src="assets/js/navbar.js"></script>
     <script src="assets/js/lightbox.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
     <script type="module" src="assets/js/gallery.js"></script>
 
         <script>
