Add loader to infinite scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
     <div class="grid">
       <div class="grid-sizer"></div>
     </div>
+    <div class="loader">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
