--- a/public/contact.html
+++ b/public/contact.html
@@ -47,8 +47,23 @@
   </form>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/granim.min.js"></script>
-  <script src="assets/js/gradient.js"></script>
-  <script src="assets/js/navbar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.min.js" integrity="sha512-CmlPTWm5+a1Gt2YSNk2rGZVvbH3Zge6imS7M4/vrhC8d+A1RcehmLxWMqUdv8aEu7pwfTo74EtnrR+8Cf8KdCA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- Initial Static Configuration -->
+  <script>
+    new Granim({
+      element: '#bg-gradient',
+      direction: 'left-right',
+      isPausedWhenNotInView: true,
+      states : {
+          "default-state": {
+              gradients: [
+                  ['#ff9966', '#ff5e62'],
+                  ['#00F260', '#0575E6'],
+                  ['#e1eec3', '#f05053']
+              ]
+          }
+      }
+    });
+  </script>
 </body>
