Move lightbox2 closer to top of viewport

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
         'resizeDuration': 100,
         'imageFadeDuration': 100,
         'fadeDuration': 100,
+        'positionFromTop': 25,
       });
 
       new Granim({
