enable cleanurls, add conditions page

--- a/public/contact.html
+++ b/public/contact.html
@@ -11,8 +11,11 @@
   <canvas id="bg-gradient"></canvas>
 
   <div class="topnav" id="topnav">
-    <a href="index.html">
+    <a href="index">
       <i class="fa-solid fa-camera"></i>
+    </a>
+    <a href="conditions">
+      <i class="fa-solid fa-sun"></i>
     </a>
     <a href="#" class="active">
       <i class="fa-solid fa-address-card"></i>
