--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
       <a href="#" class="active">
         <i class="fa-solid fa-camera"></i>
       </a>
-      <a href="contact.html">
+      <a href="conditions">
+        <i class="fa-solid fa-sun"></i>
+      </a>
+      <a href="contact">
         <i class="fa-solid fa-address-card"></i>
       </a>
       <a href="https://github.com/willfleetw">
