--- a/public/conditions.html
+++ b/public/conditions.html
@@ -12,22 +12,29 @@
     <!-- Background Granim Gradient -->
     <canvas id="bg-gradient"></canvas>
 
-    <div class="topnav" id="topnav">
-      <a href="index">
-        <i class="fa-solid fa-camera"></i>
-      </a>
-      <a href="#" class="active">
-        <i class="fa-solid fa-sun"></i>
-      </a>
-      <a href="contact">
-        <i class="fa-solid fa-address-card"></i>
-      </a>
-      <a href="https://github.com/willfleetw">
-        <i class="fa-brands fa-github"></i>
-      </a>
+    <div class="navbar">
+      <div class="navitem page-icon" id="index" class="active">
+        <a href="index">
+          <i class="fa-solid fa-camera"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon" id="conditions">
+        <a href="conditions">
+          <i class="fa-solid fa-sun"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon" id="contact">
+        <a href="contact">
+          <i class="fa-solid fa-address-card"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon" id="github">
+        <a href="https://github.com/willfleetw">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
     </div>
 
-    
     <div class="conditions">
       <div class="location-input">
         <input type="text" placeholder="Location" name="geolocation" id="geolocation" onkeydown="return processKey(event)" />
