Fix active class on pages

--- a/public/conditions.html
+++ b/public/conditions.html
@@ -13,12 +13,12 @@
     <canvas id="bg-gradient"></canvas>
 
     <div class="navbar">
-      <div class="navitem page-icon" id="index" class="active">
+      <div class="navitem page-icon" id="index">
         <a href="index">
           <i class="fa-solid fa-camera"></i>
         </a>
       </div>
-      <div class="navitem page-icon" id="conditions">
+      <div class="navitem page-icon" id="conditions" class="active">
         <a href="conditions">
           <i class="fa-solid fa-sun"></i>
         </a>
