--- a/public/contact.html
+++ b/public/contact.html
@@ -11,7 +11,7 @@
   <canvas id="bg-gradient"></canvas>
 
   <div class="navbar">
-    <div class="navitem page-icon" id="index" class="active">
+    <div class="navitem page-icon" id="index">
       <a href="index">
         <i class="fa-solid fa-camera"></i>
       </a>
@@ -21,7 +21,7 @@
         <i class="fa-solid fa-sun"></i>
       </a>
     </div>
-    <div class="navitem page-icon" id="contact">
+    <div class="navitem page-icon" id="contact" class="active">
       <a href="contact">
         <i class="fa-solid fa-address-card"></i>
       </a>
@@ -32,7 +32,7 @@
       </a>
     </div>
   </div>
-  
+
   <header>
     <h2>Contact Me</h2>
   </header>
