Add active coloring to navbar

--- a/public/conditions.html
+++ b/public/conditions.html
@@ -18,7 +18,7 @@
           <i class="fa-solid fa-camera"></i>
         </a>
       </div>
-      <div class="navitem page-icon" id="conditions" class="active">
+      <div class="navitem page-icon active" id="conditions">
         <a href="conditions">
           <i class="fa-solid fa-sun"></i>
         </a>
