--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <canvas id="bg-gradient"></canvas>
 
     <div class="navbar">
-      <div class="navitem page-icon" id="index" class="active">
+      <div class="navitem page-icon active" id="index">
         <a href="index">
           <i class="fa-solid fa-camera"></i>
         </a>
@@ -31,7 +31,7 @@
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
-      
+
       <div class="navitem gallery-control" id="filter">
         <i class="fa-solid fa-filter"></i>
       </div>
