--- a/public/contact.html
+++ b/public/contact.html
@@ -21,7 +21,7 @@
         <i class="fa-solid fa-sun"></i>
       </a>
     </div>
-    <div class="navitem page-icon" id="contact" class="active">
+    <div class="navitem page-icon active" id="contact">
       <a href="contact">
         <i class="fa-solid fa-address-card"></i>
       </a>
