Simple contact page style, update readme

--- a/public/contact.html
+++ b/public/contact.html
@@ -37,10 +37,10 @@
     </div>
   </div>
 
-  <header>
-    <h2>Contact Me</h2>
-  </header>
-  <form action="https://formspree.io/f/mdobwwpw" method="post">
+  <form class="contact-form" action="https://formspree.io/f/mdobwwpw" method="post">
+    <header>
+      <h2>Contact Me</h2>
+    </header> 
     <div>
       <div class="row">
         <div class="col-6 col-12-medium">
