Try to use current location as default

--- a/public/conditions.html
+++ b/public/conditions.html
@@ -41,7 +41,7 @@
 
     <div class="conditions">
       <div class="location-input">
-        <input type="text" placeholder="Location" name="geolocation" id="geolocation" onkeydown="return processKey(event)" />
+        <input type="text" placeholder="Default to Current Location" name="geolocation" id="geolocation" onkeydown="return processKey(event)" />
         <button type="button" id="getgeolocation" onclick="geolocate()">Get Conditions</button>
       </div>
       <div class="info">
