fix navbar tags

--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,14 @@
       <div class="navitem gallery-control dropdown" id="filter">
         <i class="fa-solid fa-filter"></i>
         <div class="dropdown-content">
-          <div class="dropdown-item filter active" onclick="filterBy($(this), '*')">Clear Filter</div>
+          <div class="dropdown-item filter active" onclick="filterBy($(this), '*')">Everything</div>
           <div class="dropdown-item filter" onclick="filterBy($(this), '.wide')">Orientation: Landscape</div>
           <div class="dropdown-item filter" onclick="filterBy($(this), '.tall')">Orientation: Portrait</div>
           <div class="dropdown-item filter" onclick="filterBy($(this), '.blackandwhite')">Black & White</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.colored')">Color</div>
+          <div class="dropdown-item filter" onclick="filterBy($(this), '.color')">Color</div>
           <div class="dropdown-item filter" onclick="filterBy($(this), '.nature')">Nature</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.urban')">Urban</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.sports')">Sports</div>
+          <div class="dropdown-item filter" onclick="filterBy($(this), '.humanmade')">Human Made</div>
+          <div class="dropdown-item filter" onclick="filterBy($(this), '.people')">People</div>
         </div>
       </div>
       <div class="navitem gallery-control dropdown" id="sort">
