fix navbar, add title

--- a/public/contact.html
+++ b/public/contact.html
@@ -16,7 +16,7 @@
 
   <div class="navbar">
     <div class="navitem page-icon" id="index">
-      <a href="index">
+      <a href="/">
         <i class="fa-solid fa-camera"></i>
       </a>
     </div>
@@ -26,8 +26,13 @@
       </a>
     </div>
     <div class="navitem page-icon active" id="contact">
-      <a href="contact">
+      <a href="#">
         <i class="fa-solid fa-address-card"></i>
+      </a>
+    </div>
+    <div class="navitem page-icon" id="instagram">
+      <a href="https://instagram.com/fleetwood_photos" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
       </a>
     </div>
     <div class="navitem page-icon" id="github">
@@ -35,8 +40,14 @@
         <i class="fa-brands fa-github"></i>
       </a>
     </div>
+
+    <div class="navitem title">
+      FLEETWOOD PHOTOS
+    </div>
   </div>
 
+
+  
   <form class="contact-form" action="https://formspree.io/f/mdobwwpw" method="post">
     <header>
       <h2>Contact Me</h2>
