--- a/public/conditions.html
+++ b/public/conditions.html
@@ -18,12 +18,12 @@
 
     <div class="navbar">
       <div class="navitem page-icon" id="index">
-        <a href="index">
+        <a href="/">
           <i class="fa-solid fa-camera"></i>
         </a>
       </div>
       <div class="navitem page-icon active" id="conditions">
-        <a href="conditions">
+        <a href="#">
           <i class="fa-solid fa-sun"></i>
         </a>
       </div>
@@ -32,10 +32,19 @@
           <i class="fa-solid fa-address-card"></i>
         </a>
       </div>
+      <div class="navitem page-icon" id="instagram">
+        <a href="https://instagram.com/fleetwood_photos" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
       <div class="navitem page-icon" id="github">
         <a href="https://github.com/willfleetw">
           <i class="fa-brands fa-github"></i>
         </a>
+      </div>
+
+      <div class="navitem title">
+        FLEETWOOD PHOTOS
       </div>
     </div>
 
