--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <div class="navbar">
       <div class="navitem page-icon active" id="index">
-        <a href="index">
+        <a href="#">
           <i class="fa-solid fa-camera"></i>
         </a>
       </div>
@@ -30,31 +30,27 @@
           <i class="fa-solid fa-address-card"></i>
         </a>
       </div>
+      <div class="navitem page-icon" id="instagram">
+        <a href="https://instagram.com/fleetwood_photos" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
       <div class="navitem page-icon" id="github">
-        <a href="https://github.com/willfleetw">
+        <a href="https://github.com/willfleetw" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
 
+      <div class="navitem title">
+        FLEETWOOD PHOTOS
+      </div>
+
       <div class="navitem gallery-control dropdown" id="filter">
         <i class="fa-solid fa-filter"></i>
-        <div class="dropdown-content">
-          <div class="dropdown-item filter active" onclick="filterBy($(this), '*')">Everything</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.wide')">Orientation: Landscape</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.tall')">Orientation: Portrait</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.blackandwhite')">Black & White</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.color')">Color</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.nature')">Nature</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.humanmade')">Human Made</div>
-          <div class="dropdown-item filter" onclick="filterBy($(this), '.people')">People</div>
-        </div>
-      </div>
-      <div class="navitem gallery-control dropdown" id="sort">
-        <i class="fa-solid fa-sort"></i>
-        <div class="dropdown-content">
-          <div class="dropdown-item sort active" onclick="sortBy($(this), 'original-order')">Default</div>
-          <div class="dropdown-item sort" onclick="sortBy($(this), 'datetaken')">Date Taken</div>
-          <div class="dropdown-item sort" onclick="sortBy($(this), 'random')">Shuffle</div>
+        <div class="dropdown-content"> <!--this should be dynamic, only include tags when photos have been fetched with those tags-->
+          <div class="dropdown-item filter active" onclick="filterBy($(this), '*')">EVERYTHING</div>
+          <div class="dropdown-item filter" onclick="filterBy($(this), '.wide')">TALL</div>
+          <div class="dropdown-item filter" onclick="filterBy($(this), '.tall')">WIDE</div>
         </div>
       </div>
     </div>
