remove conditions page, update query to clean in fp

--- a/public/404.html
+++ b/public/404.html
@@ -11,16 +11,31 @@
     <!-- Background Granim Gradient -->
     <canvas id="bg-gradient"></canvas>
 
-    <div class="topnav" id="topnav">
-      <a href="index.html">
-        <i class="fa-solid fa-camera"></i>
-      </a>
-      <a href="#contact">
-        <i class="fa-solid fa-address-card"></i>
-      </a>
-      <a href="https://github.com/willfleetw">
-        <i class="fa-brands fa-github"></i>
-      </a>
+    <div class="navbar">
+      <div class="navitem page-icon" id="index">
+        <a href="/">
+          <i class="fa-solid fa-camera"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon active" id="contact">
+        <a href="contact">
+          <i class="fa-solid fa-address-card"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon" id="instagram">
+        <a href="https://instagram.com/fleetwood_photos" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+      <div class="navitem page-icon" id="github">
+        <a href="https://github.com/willfleetw">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+  
+      <div class="navitem title">
+        FLEETWOOD PHOTOS
+      </div>
     </div>
 
     <h1>Page Not Found</h1>
