update instagram link

--- a/public/contact.html
+++ b/public/contact.html
@@ -26,7 +26,7 @@
       </a>
     </div>
     <div class="navitem page-icon" id="instagram">
-      <a href="https://instagram.com/fleetwood_photos" target="_blank">
+      <a href="https://instagram.com/_will_fleetwood_" target="_blank">
         <i class="fa-brands fa-instagram"></i>
       </a>
     </div>
