--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
           <i class="fa-solid fa-camera"></i>
         </a>
       </div>
+      <div class="navitem page-icon" id="conditions">
+        <a href="conditions">
+          <i class="fa-solid fa-sun"></i>
+        </a>
+      </div>
       <div class="navitem page-icon" id="contact">
         <a href="contact">
           <i class="fa-solid fa-address-card"></i>
